--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -1,12 +1,13 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Build and push the latest build to staging
+name: Build and push the tagged build to production
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    tags:
+      - 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -22,6 +23,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Fetch latest version
+        id: fetch_version
+        run: echo ::set-output name=TAG::${GITHUB_REF#refs/tags/}
       
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v1
@@ -43,5 +48,5 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           context: .
-          tags: ${{secrets.ACR_NAME}}/contoso-website:latest
+          tags: ${{secrets.ACR_NAME}}/contoso-website:latest,${{secrets.ACR_NAME}}/contoso-website:${{ steps.fetch_version.outputs.TAG }}
           push: true
