--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -48,5 +48,5 @@ jobs:
         uses: docker/build-push-action@v2.7.0
         with:
           context: .
-          tags: ${{secrets.ACR_NAME}}/contoso-website:latest,${{secrets.ACR_NAME}}/contoso-website:${{ steps.fetch_version.outputs.TAG }}
+          tags: ${{secrets.ACR_NAME}}/contoso-website:${{ steps.fetch_version.outputs.TAG }}
           push: true
